--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A simple, embeddable mortgage calculator that dynamically generates an interactive and styled calculator widget. It allows users to input mortgage amount, interest rate, amortization period, and payment frequency, and calculates the monthly payment based on these inputs. The package handles both the mortgage calculation logic and the HTML/CSS rendering, making it easy to integrate into any webpage by simply providing a container ID. Ideal for real estate websites, financial tools, and blogs.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack serve --open",
+    "sass": "sass src/styles.scss dist/styles.css"
   },
   "repository": {
     "type": "git",
@@ -31,5 +33,24 @@
   "bugs": {
     "url": "https://github.com/Admin-Kreate/mortgage-calculator-package/issues"
   },
-  "homepage": "https://github.com/Admin-Kreate/mortgage-calculator-package#readme"
+  "homepage": "https://github.com/Admin-Kreate/mortgage-calculator-package#readme",
+  "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.7.7",
+    "copyfiles": "^2.4.1",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.2",
+    "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.1",
+    "sass": "^1.80.3",
+    "sass-loader": "^16.0.2",
+    "style-loader": "^4.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
+  }
 }
