--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
   },
   "homepage": "https://github.com/Admin-Kreate/mortgage-calculator-package#readme",
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.7",
     "copyfiles": "^2.4.1",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.2",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.1",
@@ -55,5 +57,8 @@
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "dependencies": {
+    "firebase": "^11.1.0"
   }
 }
